--- a/public/posts/third.mdx
+++ b/public/posts/third.mdx
@@ -6,6 +6,7 @@ author: Didier
 tags: [hello, world]
 description: Hello world!
 ---
+import Counter from '../../components/examples/Counter'
 
 ## hello world
 
@@ -14,3 +15,5 @@ This is my third post!
 ### hello world HERE IS A CHANGE
 
 This is my third post!
+
+<Counter/>
