Add Image component and update styles

--- a/public/posts/third.mdx
+++ b/public/posts/third.mdx
@@ -6,7 +6,8 @@ author: Didier
 tags: [hello, world]
 description: Hello world!
 ---
-import Counter from '../../components/examples/Counter'
+
+import Counter from "../../app/components/examples/Counter.tsx";
 
 ## hello world
 
@@ -16,4 +17,34 @@ This is my third post!
 
 This is my third post!
 
-<Counter/>
+<Counter />
+
+```javascript
+console.log("hello world");
+```
+
+```typescript
+console.log("hello world");
+```
+
+```python
+print("hello world")
+```
+
+```bash
+echo "hello world"
+```
+
+```json
+{
+  "hello": "world"
+}
+```
+
+```yaml
+hello: world
+```
+
+```html
+<h1>hello world</h1>
+```
