--- a/public/posts/second.mdx
+++ b/public/posts/second.mdx
@@ -16,11 +16,14 @@ This is my second post
 This is my second post!
 
 ```js
-console.log('hello world')
-const hello = 'world'
+console.log("hello world");
+const hello = "world";
 
 function test() {
-  return 'hello world'
+  return "hello world";
 }
-
 ```
+
+export const Greet = ({ name }) => <h1>Hello {name}</h1>;
+
+<Greet name="Alice" />
